# client

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  Readme.md
.github/workflows/: ci.yaml  release.yaml  test.yaml
src/: address.rs  cli.rs  config.rs  main.rs  task.rs  todolist.rs  utils.rs
tests/: address.rs  task.rs  todolist.rs
