[package]
name = "icbtask"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive", "cargo"] }
envy = { version = "0.4" }
tabled = { version = "0.10", features = ["color"] }
clap_complete = "4.1.1"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.8"
mockito = "0.31.1"
pretty_assertions = "1.3.0"
